# text_summarization_rest_api_example

./: docker-compose.yml  dockerfile  pyproject.toml  setup.cfg
app/: crud.py  dependencies.py  main.py  models.py  schemas.py  services.py
tests/: test_sandbox.py
